--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <div class="main">
 
     <h1>Welcome to my channel</h1>
+    <h1>My name is Drax</h1>
     <p>Iam a frontend developer.</p>
+
 
 </div>
 </body>
