dev branch changes

--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
     <title>Document</title>
 </head>
 <body>
-    
-<div class="main">
-
+    <div class="main">
     <h1>Welcome to my channel</h1>
     <h1>My name is Drax</h1>
-    <p>Iam a frontend developer.</p>
-
-
+    <p>Iam a frontend developer and loves creating websites.</p>
 </div>
 </body>
 </html>
