master title changes

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="main">
-    
+    <h1>Master start</h1>
     <h1>Welcome to my channel</h1>
     <h1>My name is Drax</h1>
     <p>Iam a frontend developer and loves creating websites.</p>
-
+    <h1>Master End</h1>
 
 </div>
 </body>
